--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,6 +24,7 @@
      font-family: Georgia, 'Times New Roman', Times, serif;
      background-color: white;
      border-radius: 15px 15px;
+     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.11);
    }
 
    h1 {
